--- a/package.json
+++ b/package.json
@@ -1,15 +1,68 @@
 {
-  "name": "elysia",
-  "version": "1.0.50",
+  "name": "elysia-app-template",
+  "version": "1.0.0",
+  "description": "Template for ElysiaJS Web Application",
+  "author": "S Abd Malik",
+  "license": "MIT",
+  "module": "src/index",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "bun run --watch src/index.ts"
+    "start": "bun run --hot dist/index.js",
+    "dev": "cross-env NODE_ENV=development bun run --watch --hot .",
+    "prebuild": "rimraf dist",
+    "build": "bun build src/index.ts --target=bun --outdir dist --sourcemap=external -e elysia-rate-limit",
+    "postbuild": "tsc -p tsconfig.build.json",
+    "format": "prettier --log-level warn -w \"{config,db,public,src,test}/**/*.{md,html,css,scss,json,jsonc,js,ts}\"",
+    "lint": "eslint \"{config,db,src,test}/**/*.{js,ts}\" --cache --fix",
+    "seq": "env-cmd sequelize",
+    "prepare": "husky"
   },
   "dependencies": {
-    "elysia": "latest"
+    "@bogeychan/elysia-etag": "^0.0.6",
+    "@bogeychan/elysia-logger": "^0.0.22",
+    "@elysiajs/bearer": "^1.0.2",
+    "@elysiajs/cors": "^1.0.2",
+    "@elysiajs/eden": "^1.0.14",
+    "@elysiajs/jwt": "^1.0.2",
+    "@elysiajs/swagger": "^1.0.5",
+    "ansis": "^3.2.0",
+    "elysia": "latest",
+    "elysia-compression": "^0.0.7",
+    "elysia-helmet": "^1.0.2",
+    "elysia-ip": "^1.0.7",
+    "elysia-rate-limit": "^4.1.0",
+    "http-errors": "^2.0.0",
+    "husky": "^9.0.11",
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.12.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.3",
+    "sequelize-cli": "^6.6.2"
   },
   "devDependencies": {
-    "bun-types": "latest"
+    "@types/compressible": "^2.0.2",
+    "@types/http-errors": "^2.0.4",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/pg": "^8.11.6",
+    "@typescript-eslint/eslint-plugin": "^7.12.0",
+    "@typescript-eslint/parser": "^7.12.0",
+    "bun-types": "latest",
+    "cross-env": "^7.0.3",
+    "env-cmd": "^10.1.0",
+    "eslint": "^8",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "lint-staged": "^15.2.7",
+    "prettier": "^3.3.2",
+    "rimraf": "^5.0.7",
+    "tsconfig-paths": "^4.2.0"
   },
-  "module": "src/index.js"
+  "trustedDependencies": [
+    "es5-ext"
+  ],
+  "lint-staged": {
+    "*.{md,html,css,scss,json,jsonc}": "prettier --write",
+    "*.{js,ts}": "eslint --cache --fix"
+  }
 }
