--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "dependencies": {
     "@bogeychan/elysia-etag": "^0.0.6",
-    "@bogeychan/elysia-logger": "^0.0.22",
+    "@bogeychan/elysia-logger": "^0.1.4",
     "@elysiajs/bearer": "^1.0.2",
     "@elysiajs/cors": "^1.0.2",
     "@elysiajs/eden": "^1.0.14",
@@ -27,7 +27,7 @@
     "ansis": "^3.2.0",
     "elysia": "latest",
     "elysia-compression": "^0.0.7",
-    "elysia-helmet": "^1.0.2",
+    "elysia-helmet": "^2.0.0",
     "elysia-ip": "^1.0.7",
     "elysia-rate-limit": "^4.1.0",
     "http-errors": "^2.0.0",
@@ -36,15 +36,18 @@
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3",
-    "sequelize-cli": "^6.6.2"
+    "sequelize-cli": "^6.6.2",
+    "tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {
+    "@types/bun": "latest",
     "@types/compressible": "^2.0.2",
+    "@types/eslint": "^8",
     "@types/http-errors": "^2.0.4",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/pg": "^8.11.6",
-    "@typescript-eslint/eslint-plugin": "^7.12.0",
-    "@typescript-eslint/parser": "^7.12.0",
+    "@types/pg": "^8.11.10",
+    "@typescript-eslint/eslint-plugin": "^8",
+    "@typescript-eslint/parser": "^8",
     "bun-types": "latest",
     "cross-env": "^7.0.3",
     "env-cmd": "^10.1.0",
@@ -52,11 +55,15 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prettier": "^5.1.3",
-    "lint-staged": "^15.2.7",
-    "prettier": "^3.3.2",
-    "rimraf": "^5.0.7",
-    "tsconfig-paths": "^4.2.0"
+    "eslint-plugin-prettier": "^5.2.1",
+    "lint-staged": "^15.2.2",
+    "prettier": "^3.2.5",
+    "rimraf": "^6.0.0",
+    "typescript": "^5 && <5.6.0"
+  },
+  "patchedDependencies": {
+    "@bogeychan/elysia-etag@0.0.6": "patches/@bogeychan%2Felysia-etag@0.0.6.patch",
+    "elysia-compression@0.0.7": "patches/elysia-compression@0.0.7.patch"
   },
   "trustedDependencies": [
     "es5-ext"
